[gd_scene load_steps=3 format=3 uid="uid://e2jhu0ksgvw1"]

[ext_resource type="Script" uid="uid://cfenewsc4posn" path="res://scene/tiles/new_tile_1.gd" id="1_6phr1"]
[ext_resource type="Texture2D" uid="uid://c40ng3x1mrern" path="res://sprite/tiles/sb_tile1.png" id="2_6phr1"]

[node name="tile_1" type="Node2D"]
script = ExtResource("1_6phr1")

[node name="SbTile" type="Sprite2D" parent="."]
texture = ExtResource("2_6phr1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-64, -110, 64, -110, 128, 0, 64, 110, -64, 110, -128, 0)
disabled = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
